# cse476-project

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
data/input/: smoke.json
data/output/: cse_476_final_project_answers.json
scripts/: ollama_serve.sh
src/: evaluate_answers.py  generate_answers.py
src/agent/: __init__.py  agent_logger.py  call_counter.py  client.py  graph.py  normalize_answer.py  router.py  tools.py
src/agent/graphs/: __init__.py  base.py  direct.py  react.py
